--- a/index_style.css
+++ b/index_style.css
@@ -37,6 +37,7 @@ html{
 h2{
     margin-bottom: 15px;
     color: white;
+    font-size: 0.9em;
 }
 
 header, main, footer{
@@ -55,13 +56,14 @@ li{
 }
 
 .container_weather{
-    border: 2px solid rgb(0, 0, 0);
-    background-color: rgb(186, 186, 207);
+    border: 2px solid rgb(192, 192, 192);
+    background-color: rgb(255, 255, 255);
     border-radius: 10px;
     padding: 15px;
     width: 25%;
     min-width: 300px;
     font-size: 1.1em;
+    box-shadow: 0px 0px 3px gray;
 }
 
 .container_legend{
@@ -82,6 +84,8 @@ li{
     display: inline;
     padding-right: 5px;
     flex-wrap: wrap;
+    color: white;
+    font-size: 0.6em;
 }
 
 #choice{
