--- a/index_style.css
+++ b/index_style.css
@@ -34,10 +34,26 @@ html{
     color: black;
 }
 
+h1{
+    margin-bottom: 10px;
+}
+
 h2{
     margin-bottom: 15px;
     color: white;
     font-size: 0.9em;
+}
+
+#typeOfCloud{
+    margin-bottom: 10px;
+    border: 2px solid black;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    max-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    border-radius: 10px;
+    box-shadow: 0px 0px 3px gray;
 }
 
 header, main, footer{
