--- a/index_style.css
+++ b/index_style.css
@@ -56,6 +56,29 @@ h2{
     box-shadow: 0px 0px 3px gray;
 }
 
+#search{
+    display: flex;
+    justify-content: center;
+}
+
+.buttonGPS{
+    margin-top: 10px;
+    border-radius: 5px;
+    width: 175px;
+    height: 25px;
+    background-color: rgb(185, 185, 231);
+}
+
+.buttonGPS:hover{
+    background-color: rgb(167, 233, 167);
+    font-size: 0.85em;
+    transition: 0.5s;
+}
+
+#GPS{
+    margin-left: 5px;
+}
+
 header, main, footer{
     text-align: center;
 }
@@ -148,6 +171,15 @@ li{
     background-color: rgb(167, 233, 167);
     font-size: 0.85em;
     transition: 0.5s;
+}
+
+/* FOOTER */
+
+#position{
+    display: flex;
+    justify-content: center;
+    margin-top: 30px;
+    font-size: 0.7em;
 }
 
 
