--- a/index_style.css
+++ b/index_style.css
@@ -15,6 +15,7 @@ ul{
 html{
     font-family: Raleway;
     font-weight: bolder;
+    height: 100%;
 }
 
 body{
@@ -53,6 +54,8 @@ h1, h2, h3, h4, p, li{
 h1{
     margin-bottom: 10px;
     margin-top: 10px;
+    font-size: 2.5em;
+    transition: 1s;
 }
 
 h2{
@@ -71,8 +74,6 @@ h3{
 
 #typeOfCloud{
     margin-bottom: 10px;
-    border: 2px solid rgb(177, 177, 177);
-    background: white;
     padding-top: 5px;
     padding-bottom: 5px;
     max-width: 200px;
