--- a/index_style.css
+++ b/index_style.css
@@ -16,10 +16,12 @@ html{
     font-family: Raleway;
     font-weight: bolder;
     height: 100%;
+    background-color: black;
 }
 
 body{
     background: no-repeat linear-gradient(90deg, rgb(0, 0, 0) 0%, rgb(36, 39, 61) 50%, rgb(0, 0, 0) 100%);
+    height: 1000px;
 }
 
 #suggestionsEtDarkMode{
