--- a/index_style.css
+++ b/index_style.css
@@ -25,7 +25,7 @@ header{
     display: flex;
     flex-direction: column;
     align-items: center;
-    background: url("/img/clouds-1920x1280.jpg") no-repeat center center;
+    background: url("clouds-1920x1280.jpg") no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 500px;
