--- a/index_style.css
+++ b/index_style.css
@@ -313,12 +313,31 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
     margin-top: 30px;
 }
 
 footer p{
     text-align: center;
     margin-bottom: 10px;
+}
+
+#position{
+    margin-top: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+footer a{
+    margin-bottom: 5px;
+    text-decoration: none;
+    color: black;
+}
+
+#version{
+    margin-top: 20px;
+    font-size: 0.6em;
 }
 
 @media (max-width: 660px) {
