--- a/index_style.css
+++ b/index_style.css
@@ -177,10 +177,15 @@ h1{
 
 /* Liste des favoris */
 
+#container-div-favoris{
+    display: flex;
+    align-items: flex-end;
+    margin-top: 10px;
+}
+
 .container_favoris{
     display: flex;
     align-items: center;
-    margin-top: 10px;
 }
 
 .container_favoris h3{
@@ -193,7 +198,7 @@ h1{
     align-items: center;
 }
 
-.favContainer li, .favContainer p{
+.favContainer span, .favContainer p{
     margin-right: 10px;
     margin-left: 15px;
     list-style: none;
@@ -216,12 +221,13 @@ h1{
 #bloc-ville{
     display: flex;
     align-items: center;
-    margin-top: 70px;
+    margin-top: 70px;    
 }
 
 #bloc-ville i{
     font-size: 1.9em;
-    color: rgb(0, 12, 80);
+    color: rgb(0, 0, 0);
+    margin-right: 15px;
 }
 
 h2{
@@ -249,6 +255,12 @@ main{
     margin-top: 40px;
     margin-bottom: 15px;
 }
+
+/* Bloc qualité de l'air */
+
+
+
+/* Bloc 2 avec les barres de progressions */
 
 #bloc-2-main{
     display: flex;
@@ -291,7 +303,13 @@ main{
     min-width: 300px;
     font-size: 1.1em;
 }
+/* 
+Passage du texte en blanc pour mode sombre par defaut
 
+.container_weather li{
+    color: white;
+}
+*/
 .divProgress{
     display: flex;
     justify-content: center;
@@ -315,6 +333,8 @@ footer{
     justify-content: center;
     flex-direction: column;
     margin-top: 30px;
+    padding-top: 10px;
+    background-color: rgb(250, 250, 250);
 }
 
 footer p{
