--- a/index_style.css
+++ b/index_style.css
@@ -32,6 +32,43 @@ header{
     box-shadow: 0px 0px 3px black;
 }
 
+/* Message d'erreur <span> */
+
+#erreur_texte{
+    display: none;
+    width: 98%;
+    height: 6%;
+    background-color: rgba(185, 0, 0, 0.9);
+    border: 3px solid rgb(143, 0, 0);
+    border-bottom-right-radius: 15px;
+    border-bottom-left-radius: 15px;
+    border-top: 0px;
+    text-align: center;
+    padding-top: 3%;
+    padding-bottom: 10px;
+    font-weight: bold;
+    box-shadow: 0px 0px 3px black;
+}
+
+#erreur{
+    display: none;
+    position: absolute;
+    width: 95%;
+}
+
+#icon_erreur{
+    display: none;
+    color: rgba(185, 0, 0, 0.8);
+    background-color: white;
+    box-shadow: 0px 0px 4px black;
+    width: 21px;
+    height: 20px;
+    border-radius: 50%;
+    text-align: center;
+    margin: auto;
+    margin-top: 5px;
+}
+
 /* Liste de suggestions */
 
 #suggestionsEtDarkMode{
@@ -222,6 +259,7 @@ h1{
 
 .lienFavoris{
     text-decoration: none;
+    padding-left: 5px;
 }
 
 #ajouterFavoris, #favorisActuel{
